# libco

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  config.h.in  run_tests_linux.sh  test_linux.sh
.github/workflows/: ci.yml  format.yml
benchmarks/: CMakeLists.txt  bench_channel.c  bench_context_switch.c  bench_spawn.c  bench_stress.c
docs/design/: 00-overview.md  01-architecture.md  02-api-design.md  03-implementation.md  04-testing.md  05-build.md  06-roadmap.md  07-cxx-wrapper-draft.md  IMPROVEMENTS.md  NAMING-ANALYSIS.md  README.md
examples/: CMakeLists.txt  README.md  demo_concurrent.c  demo_coxx.cpp  demo_echo_client.c  demo_echo_server.c  demo_producer_consumer.c  demo_scheduler.c  demo_stack_pool.c
libco/: CMakeLists.txt
libco/include/libco/: co.h  co_sync.h
libco/src/: co_allocator.c  co_allocator.h  co_iomux.h  co_queue.h  co_routine.c  co_routine.h  co_scheduler.c  co_scheduler.h  co_stack_pool.c  co_stack_pool.h  co_timer.c  co_timer.h
libco/src/platform/: context.h
libco/src/platform/linux/: context.c  iomux_epoll.c
libco/src/platform/macos/: context.c
libco/src/platform/windows/: context.c  iomux_iocp.c
libco/src/sync/: co_channel.c  co_channel.h  co_cond.c  co_cond.h  co_mutex.c  co_mutex.h
libcoxx/: CMakeLists.txt
libcoxx/include/coxx/: channel.hpp  coxx.hpp  scheduler.hpp  sync.hpp
libcoxx/src/: scheduler.cpp  sync.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  test_producer_consumer.c
tests/unit/: CMakeLists.txt  test_allocator.c  test_channel.c  test_cond.c  test_context.c  test_coxx.cpp  test_epoll_timeout.c  test_example.c  test_example.cpp  test_iocp_timeout.c  test_mutex.c  test_routine.c  test_scheduler.c  test_sleep.c  test_stack_pool.c  test_timer.c  test_timer_leak_diagnosis.c
tools/: format.ps1  format.sh
